force-app/main/default/objects/Quotation__c/fields/Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_Email__c</fullName>
    <label>Approver Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>