force-app/main/default/objects/Quotation__c/fields/CC_Remarks_3__c.field-meta.xml
<CustomField>
    <fullName>CC_Remarks_3__c</fullName>
    <label>CC Remarks 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>