force-app/main/default/objects/Quotation__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>IF(  NOT( ISBLANK(Lead_Name__r.Email) ) , Lead_Name__r.Email,  Customer_Contact__r.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>