force-app/main/default/objects/Quotation__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>