force-app/main/default/objects/Quotation__c/fields/Lead_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Lead_Pincode__c</fullName>
    <formula>Lead_Name__r.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Pincode</label>
    <type>Text</type>
</CustomField>