force-app/main/default/objects/Quotation__c/fields/Product_Names__c.field-meta.xml
<CustomField>
    <fullName>Product_Names__c</fullName>
    <label>Product Names</label>
    <type>TextArea</type>
</CustomField>