force-app/main/default/objects/Quotation__c/fields/Project_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Project_Sr_No__c</fullName>
    <formula>Opportunity__r.Project_S_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Sr.No.</label>
    <type>Text</type>
</CustomField>