force-app/main/default/objects/Quotation__c/fields/Quotation_Number__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Number__c</fullName>
    <label>Quotation Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>