force-app/main/default/objects/Quotation__c/fields/Quotation_PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>Quotation_PDF_Link__c</fullName>
    <formula>$Label.Quotation_Domain_Link  + Quote_PDF_Link__c</formula>
    <label>Quotation PDF Link</label>
    <type>Text</type>
</CustomField>