force-app/main/default/objects/Quotation__c/fields/Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charge__c</fullName>
    <label>Shipping Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>