force-app/main/default/objects/Quotation__c/fields/Total_MRP__c.field-meta.xml
<CustomField>
    <fullName>Total_MRP__c</fullName>
    <inlineHelpText>Maximum Retailing Price</inlineHelpText>
    <label>Total MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>