force-app/main/default/objects/Quotation__c/fields/Total_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Number__c</fullName>
    <label>Total Product Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>